--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,61 @@
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --black: #0a0908;
+  --purple: #542344;
+  --gray: #6d6466;
+  --light-gray: #f3f3f3;
+  --white: #ffffff;
+}
+
 body {
   margin: 0;
   padding: 0;
+  background-image: url(./assets/memphis-mini.png);
+  background-repeat: repeat;
+  background-size: 200px;
+  /* Background pattern from Toptal Subtle Patterns */
+  font-family: "Roboto", sans-serif;
 }
+
+/* TYPOGRAPHY */
+
+h1,
+h2,
+p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a:visited {
+  color: inherit;
+}
+
+/* BUTTONS */
+
+.button {
+  padding: 1em 1.25em;
+  border-radius: 5px;
+  border: 0em;
+  font-size: 1.2rem;
+  outline: none;
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+}
+
+/* LAYOUT */
+
+.app-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+/* MEDIA QUERIES */
