--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -2,30 +2,17 @@
 
 .landing-tagline {
   text-align: center;
-  font-style: italic;
-  font-size: 3rem;
-  font-family: "Roboto", sans-serif;
-  font-weight: 900;
+  /* font-style: italic; */
+  font-size: 3.5rem;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
   margin: 1em 0;
+  color: var(--black);
 }
 
 /* BUTTONS */
 
-.button-primary {
-  background: var(--purple);
-  color: var(--white);
-  font-weight: 700;
-  letter-spacing: 0.04em;
-  margin: 0;
-  font-size: 2rem;
-}
-
 /* LAYOUT */
-
-.page-container {
-  margin: 0;
-  height: 100%;
-}
 
 .landing-page {
   display: flex;
@@ -33,5 +20,6 @@
   justify-content: center;
   align-items: center;
   padding: 3em;
+  padding-bottom: 12em;
 }
 /* MEDIA QUERIES */
