--- a/src/components/SignUpPage/SignUpPage.css
+++ b/src/components/SignUpPage/SignUpPage.css
@@ -1,7 +1,39 @@
 /* TYPOGRAPHY */
 
+.cta-link {
+  text-align: center;
+}
+
+.cta-link:hover {
+  text-decoration: underline;
+}
+
 /* BUTTONS */
 
+.button-signup {
+  width: 100%;
+  color: white;
+  background-color: var(--purple);
+}
+
+/* FORMS */
+
+.signup-form {
+  width: 500px;
+  margin: 2em auto;
+}
+
+.username-signup-input {
+  width: 100%;
+  margin-bottom: 1em;
+}
+
 /* LAYOUT */
+
+.sign-up-page {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
 
 /* MEDIA QUERIES */
