--- a/src/components/Signature/Signature.css
+++ b/src/components/Signature/Signature.css
@@ -2,10 +2,11 @@
 
 .signature {
   text-align: center;
-  margin: 0.5em;
+  margin: 0.5em auto;
   font-size: 0.75rem;
   text-decoration: none;
   color: var(--black);
+  width: 150px;
 }
 
 .signature:hover {
