--- a/src/components/UserLinks/LinkComp/LinkComp.css
+++ b/src/components/UserLinks/LinkComp/LinkComp.css
@@ -12,12 +12,13 @@
   border-radius: 5px;
   outline: none;
   display: flex;
-  width: 600px;
+  width: 35rem;
   margin: 0 auto;
   margin-bottom: 1em;
-  padding: 1em;
+  padding: 0.4em 1em;
   justify-content: space-between;
   align-items: center;
+  height: 5rem;
 }
 
 .link-div:last-child {
@@ -30,7 +31,7 @@
 }
 
 .short-link {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .link-info {
