--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -4,6 +4,7 @@
 
 .button-45 {
   width: 45%;
+  min-width: 250px;
 }
 
 /* LAYOUT */
@@ -17,14 +18,21 @@
   margin-bottom: 1em;
 }
 
+.account-subcomponent:first-child {
+  margin-top: 1em;
+}
+
 .edit-icons-div {
   width: 27.5%;
+
   text-align: right;
+  flex-shrink: 1;
 }
 
 .submit-icon {
   width: 27.5%;
   text-align: left;
+  flex-shrink: 1;
 }
 
 .inside-box {
@@ -33,7 +41,7 @@
   justify-content: space-between;
   background: var(--white);
   width: 45%;
-
+  min-width: 250px;
   padding: 1em 1.2em;
   font-size: 1.2rem;
   border: 1px solid var(--gray);
@@ -57,6 +65,7 @@
   border: none;
   font-size: 1.2rem;
   outline: none;
+  min-width: 100px;
   margin-left: 1em;
 }
 
