--- a/src/components/LinksPage/LinksPage.css
+++ b/src/components/LinksPage/LinksPage.css
@@ -44,4 +44,11 @@
 
 /* LAYOUT */
 
+.no-links-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 /* MEDIA QUERIES */
