--- a/src/components/LinksPage/LinksPage.css
+++ b/src/components/LinksPage/LinksPage.css
@@ -1,4 +1,7 @@
 /* TYPOGRAPHY */
+.https {
+  font-size: 1.2rem;
+}
 
 /* BUTTONS */
 
@@ -11,18 +14,20 @@
 }
 
 .shorten-link-form {
-  min-width: 400px;
-  width: 50%;
+  min-width: 350px;
+  max-width: 600px;
+  width: 60%;
   margin: 0 auto;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   display: flex;
 }
 
 .shorten-link-input-div {
   flex-grow: 1;
-  margin-right: 0.5em;
+
   background: white;
   display: flex;
+  flex-shrink: 2;
 }
 
 .shorten-link-input {
@@ -31,15 +36,21 @@
   font-size: 1.2rem;
   flex-grow: 1;
   padding: 0 0.5em;
-}
-
-.shorten-link-overlay {
-  position: absolute;
+  min-width: 150px;
 }
 
 .shorten-link-button {
   color: var(--white);
   background: var(--purple);
+  flex-shrink: 0;
+  flex-grow: 0;
+  margin-left: 0.5em;
+  font-size: 1.2rem;
+  outline: none;
+  cursor: pointer;
+  padding: 0.9em 1.2em;
+  border-radius: 5px;
+  border: 0em;
 }
 
 /* LAYOUT */
@@ -52,3 +63,17 @@
 }
 
 /* MEDIA QUERIES */
+
+@media (max-width: 700px) {
+  .https {
+    font-size: 0.8rem;
+  }
+
+  .shorten-link-input {
+    font-size: 0.8rem;
+  }
+
+  .shorten-link-button {
+    font-size: 0.8rem;
+  }
+}
