--- a/src/components/LinksPage/UserLinks/UserLinks.css
+++ b/src/components/LinksPage/UserLinks/UserLinks.css
@@ -9,9 +9,11 @@
 .all-links {
   height: 23rem;
   overflow: auto;
-  width: 38rem;
-  padding: 0;
+  width: 50%;
+  padding-right: 0.5em;
   margin: 0.5em auto;
+  max-width: 600px;
+  min-width: 350px;
 }
 
 /* width */
