--- a/src/components/LinksPage/UserLinks/LinkComp/LinkComp.css
+++ b/src/components/LinksPage/UserLinks/LinkComp/LinkComp.css
@@ -28,7 +28,7 @@
   border-radius: 5px;
   outline: none;
   display: flex;
-  width: 35rem;
+  width: 100%;
   margin: 0 auto;
   margin-bottom: 1em;
   padding: 0.4em 1em;
@@ -47,7 +47,7 @@
 }
 
 .link-info {
-  font-size: 0.75rem;
+  font-size: 0.7rem;
   align-self: flex-end;
 }
 
@@ -56,3 +56,23 @@
   cursor: pointer;
 }
 /* MEDIA QUERIES */
+
+@media (max-width: 900px) {
+  .short-link {
+    font-size: 1.1rem;
+  }
+
+  .long-link {
+    font-size: 0.85rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .short-link {
+    font-size: 1rem;
+  }
+
+  .long-link {
+    font-size: 0.75rem;
+  }
+}
